Rearchitect for BFF